--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-node_modules
+# Environment variables - NEVER commit these!
 .env
+.env.local
+.env.production
+.env*.local
+
+# Dependencies
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# Build output
+dist/
+build/
